--- a/docs/12_gallery/css/transition.css
+++ b/docs/12_gallery/css/transition.css
@@ -453,7 +453,7 @@ margin-top: calc(var(--padding-text)/2);
 
 
 
-/* parageraph over flow scroll */
+/* parageraph overflow scroll */
 
 .cp_smalltile_fbg > div {
     display: flex;
@@ -475,6 +475,12 @@ margin-top: calc(var(--padding-text)/2);
 }
 .cp_smalltile_fbg > div .additional a {
     flex-shrink: 0;
+}
+
+
+/*  overflow scroll bottom fade mask */
+.cp_fade {
+    -webkit-mask-image: linear-gradient(to left, black 15px, transparent 15px), linear-gradient(to top, transparent, black 128px);
 }
 
 
