--- a/docs/css/02_base.css
+++ b/docs/css/02_base.css
@@ -193,7 +193,7 @@ html {
     padding: 0;
     scroll-behavior: smooth;
 }
-ul, li {
+ul, ol, dl, li, dt, dd {
     padding: 0;
     margin: 0;
     list-style: none;
