list update: fix specs' display custom property, one more color swatch

--- a/docs/07_list/css/list_update.css
+++ b/docs/07_list/css/list_update.css
@@ -245,7 +245,7 @@ dl {
 }
 
 .cp_dl-spec {
-    display: var(--cp_dl-spec-display);
+    display: var(--cp_dl-spec-display, revert);
     grid-template-columns: var(--cp_dl-spec-columns);
     margin: var(--sp_em-l) 0;
 }
