--- a/docs/css/01_type_color.css
+++ b/docs/css/01_type_color.css
@@ -45,6 +45,7 @@
 --nv-14-dd: #dddddd;
 --nv-12-5-cc: #CCCCCC;
 --nv-9-5-99: #999999;
+--nv-8-80: #808080;
 --nv-6-5-66: #666666;
 --nv-3-33: #333333;
 --nv-2-22: #222222;
