--- a/docs/12_gallery/css/transition.css
+++ b/docs/12_gallery/css/transition.css
@@ -485,7 +485,7 @@ p {
 
 /*  overflow scroll bottom fade mask */
 .cp_fade {
-    -webkit-mask-image: linear-gradient(to left, black 15px, transparent 15px), linear-gradient(to top, transparent, black 64px);
+    -webkit-mask-image: linear-gradient(to left, black 15px, transparent 15px), linear-gradient(to top, transparent, black 20% 80%, transparent);
 }
 
 @media screen and (min-width: 640px) {
@@ -746,4 +746,18 @@ section:has(#bottomright:checked) .cp_smalltile_fbg img {
 }
 section:has(#pixel:checked) .cp_smalltile_fbg img {
     object-position: -100px -30px;
+}
+
+/*=========================== color scheme ajustement =========================*/
+
+/*vertical shadow*/
+section:has(#light:checked) .cp_smalltile_fbg > div::after {
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0));
+}
+/* horziontal shadow */
+section:has(#light:checked) .cp_smalltile_fbg > figure::after {
+    background: linear-gradient(to right, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0));
+}
+section:has(#light:checked) .cp_smalltile_fbg > div {
+    color: var(--nv-0);
 }
