table update: filters and styles

--- a/docs/01_table/css/00_table_general.css
+++ b/docs/01_table/css/00_table_general.css
@@ -57,6 +57,9 @@
 body {
     background-color: var(--nv-16);
 }
+table {
+    font-variant-numeric: tabular-nums;
+}
 th, td {
     line-height: 1.2;
 }
