--- a/docs/01_table/css/02_table_vgpu.css
+++ b/docs/01_table/css/02_table_vgpu.css
@@ -24,6 +24,11 @@
 
 /*=========== base ===========*/
 
+.md_chip_scroll:first-of-type {
+    padding-bottom: 420px;
+    margin-bottom: -420px;
+}
+
 main.padding > :nth-child(n + 2) {
     margin-top: 32px;
 }
