--- a/docs/07_list/css/list_update.css
+++ b/docs/07_list/css/list_update.css
@@ -149,6 +149,16 @@
     top: calc(1em * 1.4 / 2 - (1em + 1px) / 2);
     left: calc((1em + 1px) * -1 - var(--sp_em-xs));
 }
+.cp_ul-chev.bold > li::before {
+    content: '';
+    background-image: url(../../css/cp_assets/ic_listbullet_bold.svg);
+}
+
+.cp_ul-chev .cp_ol-decimal.resized > li::marker {
+    font-size: 0.9em;
+/*    font-weight: normal;*/
+}
+
 
 
 
